test/cli/test/images/private-registry/policies.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
  name: check-image
spec:
  admission: true
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: verify-signature
    verifyImages:
    - attestors:
      - count: 1
        entries:
        - certificates:
            cert: |-
              -----BEGIN CERTIFICATE-----
              MIIDTTCCAjWgAwIBAgIJAPI+zAzn4s0xMA0GCSqGSIb3DQEBCwUAMEwxCzAJBgNV
[...]
              uOKpF5rWAruB5PCIrquamOejpXV9aQA/K2JQDuc0mcKz
              -----END CERTIFICATE-----
      imageReferences:
      - ghcr.io/kyverno/test-verify-image-private*
      type: Notary
  validationFailureAction: Enforce
