test/cli/test/images/private-registry/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: signed
spec:
  containers:
    - name: signed
      image: ghcr.io/kyverno/test-verify-image-private:signed
