test/cli/test/images/private-registry/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policies.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: check-image
  resources:
  - signed
  result: pass
  rule: verify-signature
